# YEFS

./: .gitignore  .gitmodules  .qmlls.ini  BUILD.md  CMakeLists.txt  IMPLEMENTATION.md  LICENSE  README.md
.github/: copilot-instructions.md
.github/workflows/: build.yml
docs/: Implementation-Summary.md  MapParser.md
reference/qml/: Gallery.qml
reference/qml/Examples/Effect/: ExpSwitchEffect.qml
src/: CMakeLists.txt
src/core/: Application.cpp  Application.h  IMapEngine.h  IMapParser.h  IMapSource.h  IPlugin.h  MapLibreEngine.cpp  MapLibreEngine.h  MapParserFactory.cpp  MapSettings.cpp  MapSettings.h  MapSourceManager.cpp  MapSourceManager.h  MessageBus.cpp  MessageBus.h  OnlineMapProvider.cpp  OnlineMapProvider.h  PluginManager.cpp  PluginManager.h  SettingsManager.cpp  SettingsManager.h  UnitManager.cpp  UnitManager.h
src/core/parsers/: GPXParser.cpp  GPXParser.h  GeoJSONParser.cpp  GeoJSONParser.h  KMLParser.cpp  KMLParser.h
src/cpp/: main.cpp
src/qml/: Gallery.qml  Global.qml  Main.qml  YefsGlobal.qml
src/qml/Components/: LayerPanel.qml  OnlineMapPanel.qml
src/qml/Controls/: CodeRunner.qml
src/qml/Home/: AboutPage.qml  HomePage.qml  MapPage.qml  SettingsPage.qml
src/qml/Settings/: AppearanceSettings.qml  DataSettings.qml  IconBrowserWindow.qml  MapSettings.qml  UnitSettings.qml
