
cmake_minimum_required(VERSION 3.16)

project(YEFS_Solution)

if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Debug)
endif()

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/out/${CMAKE_BUILD_TYPE}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/out/${CMAKE_BUILD_TYPE}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/out/${CMAKE_BUILD_TYPE}/lib)

set(HUSKARUI_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/out/${CMAKE_BUILD_TYPE})
set(HUSKARUI_PLUGIN_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/HuskarUI/Basic)

set(BUILD_HUSKARUI_STATIC_LIBRARY OFF)
set(BUILD_HUSKARUI_ON_DESKTOP_PLATFORM ON)
set(INSTALL_HUSKARUI_IN_DEFAULT_LOCATION ON)

# Build third-party dependencies
add_subdirectory(3rdparty/HuskarUI)

#Your project
add_subdirectory(src)
